--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 
   // PWA install
   if ("serviceWorker" in navigator) {
-    navigator.serviceWorker.register("sw.js").catch(()=>{});
+    navigator.serviceWorker.register("sw.js?v=2").catch(()=>{});
   }
 
   // Init
