--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
   setUIForKey(yyyy_mm_dd(cursor));
 })();
 </script>
-  <div class="card" style="margin-top:16px">
+<div class="card" style="margin-top:16px">
   <h2>🍽️ 不知道吃什么？（左右滑）</h2>
 
   <div style="
@@ -419,40 +419,88 @@
     scroll-snap-type:x mandatory;
     padding-bottom:6px;
   ">
-    <div class="pill" style="min-width:260px; scroll-snap-align:start">
-      <strong>今天很累</strong><br/>
-      原片燕麦 / 红薯 + 鸡蛋<br/>
-      <span class="meta">稳能量、不犯困</span>
+    <div class="pill" style="
+      min-width:260px;
+      min-height:150px;
+      padding:14px 16px;
+      display:flex;
+      flex-direction:column;
+      justify-content:space-between;
+      scroll-snap-align:start;
+    ">
+      <div style="font-weight:700;">今天很累</div>
+      <div>原片燕麦 / 红薯 + 鸡蛋</div>
+      <div class="meta">稳能量、不犯困</div>
     </div>
 
-    <div class="pill" style="min-width:260px; scroll-snap-align:start">
-      <strong>撑一下午</strong><br/>
-      杂粮饭 + 蛋白 + 蔬菜<br/>
-      <span class="meta">下午更平稳</span>
+    <div class="pill" style="
+      min-width:260px;
+      min-height:150px;
+      padding:14px 16px;
+      display:flex;
+      flex-direction:column;
+      justify-content:space-between;
+      scroll-snap-align:start;
+    ">
+      <div style="font-weight:700;">撑一下午</div>
+      <div>杂粮饭 + 蛋白 + 蔬菜</div>
+      <div class="meta">下午更平稳</div>
     </div>
 
-    <div class="pill" style="min-width:260px; scroll-snap-align:start">
-      <strong>睡晚修复</strong><br/>
-      红薯 + 蛋白 + 温热菜<br/>
-      <span class="meta">对系统温和</span>
+    <div class="pill" style="
+      min-width:260px;
+      min-height:150px;
+      padding:14px 16px;
+      display:flex;
+      flex-direction:column;
+      justify-content:space-between;
+      scroll-snap-align:start;
+    ">
+      <div style="font-weight:700;">睡晚修复</div>
+      <div>红薯 + 蛋白 + 温热菜</div>
+      <div class="meta">对系统温和</div>
     </div>
 
-    <div class="pill" style="min-width:260px; scroll-snap-align:start">
-      <strong>想吃面</strong><br/>
-      荞麦面（半份）+ 蛋白<br/>
-      <span class="meta">解馋但不放大波动</span>
+    <div class="pill" style="
+      min-width:260px;
+      min-height:150px;
+      padding:14px 16px;
+      display:flex;
+      flex-direction:column;
+      justify-content:space-between;
+      scroll-snap-align:start;
+    ">
+      <div style="font-weight:700;">想吃面</div>
+      <div>荞麦面（半份）+ 蛋白 + 多菜</div>
+      <div class="meta">解馋但不放大波动</div>
     </div>
 
-    <div class="pill" style="min-width:260px; scroll-snap-align:start">
-      <strong>胃口差</strong><br/>
-      清汤 + 蛋花 / 豆腐<br/>
-      <span class="meta">避免能量塌陷</span>
+    <div class="pill" style="
+      min-width:260px;
+      min-height:150px;
+      padding:14px 16px;
+      display:flex;
+      flex-direction:column;
+      justify-content:space-between;
+      scroll-snap-align:start;
+    ">
+      <div style="font-weight:700;">胃口差</div>
+      <div>清汤 + 蛋花 / 豆腐 + 少量主食</div>
+      <div class="meta">避免能量塌陷</div>
     </div>
 
-    <div class="pill" style="min-width:260px; scroll-snap-align:start">
-      <strong>外食兜底</strong><br/>
-      有主食 + 有蛋白 + 少汤<br/>
-      <span class="meta">看起来稳最重要</span>
+    <div class="pill" style="
+      min-width:260px;
+      min-height:150px;
+      padding:14px 16px;
+      display:flex;
+      flex-direction:column;
+      justify-content:space-between;
+      scroll-snap-align:start;
+    ">
+      <div style="font-weight:700;">外食兜底</div>
+      <div>有主食（少量）+ 有蛋白 + 少汤少甜</div>
+      <div class="meta">看起来稳最重要</div>
     </div>
   </div>
 </div>
