--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <button id="nextBtn">明天 →</button>
           <button id="todayBtn">回到今天</button>
         </div>
-        <div class="small">提示：iPhone 上可用 Safari 打开此页面后，点「分享」→「添加到主屏幕」实现像 App 一样打卡。</div>
+        <div class="small">提示：记得点击保存哦。</div>
       </section>
 
       <aside class="card">
@@ -139,15 +139,7 @@
         </div>
 
         <div style="margin-top:10px" class="two">
-          <div>
-            <div class="meta">海带/高碘食物</div>
-            <select id="seaweed">
-              <option value="">（未记录）</option>
-              <option value="no">没有</option>
-              <option value="small">少量（≤1次/周）</option>
-              <option value="more">较多/连续</option>
-            </select>
-          </div>
+
           <div>
             <div class="meta">饮水（L）</div>
             <input id="water" type="number" inputmode="decimal" min="0" max="5" step="0.1" placeholder="例如 2.0" />
@@ -409,6 +401,7 @@
   setUIForKey(yyyy_mm_dd(cursor));
 })();
 </script>
+  
 <div class="card" style="margin-top:16px">
   <h2>🍽️ 不知道吃什么？（左右滑）</h2>
 
@@ -419,90 +412,112 @@
     scroll-snap-type:x mandatory;
     padding-bottom:6px;
   ">
-    <div class="pill" style="
+
+    <!-- 卡片 1 -->
+    <div style="
       min-width:260px;
-      min-height:150px;
-      padding:14px 16px;
+      padding:12px 14px;
+      border:1px solid #e5e7eb;
+      border-radius:14px;
+      background:#fff;
+      scroll-snap-align:start;
       display:flex;
       flex-direction:column;
       justify-content:space-between;
-      scroll-snap-align:start;
     ">
-      <div style="font-weight:700;">今天很累</div>
+      <div style="font-weight:600;">今天很累</div>
       <div>原片燕麦 / 红薯 + 鸡蛋</div>
-      <div class="meta">稳能量、不犯困</div>
+      <div style="font-size:12px; color:#6b7280;">稳能量、不犯困</div>
     </div>
 
-    <div class="pill" style="
+    <!-- 卡片 2 -->
+    <div style="
       min-width:260px;
-      min-height:150px;
-      padding:14px 16px;
+      padding:12px 14px;
+      border:1px solid #e5e7eb;
+      border-radius:14px;
+      background:#fff;
+      scroll-snap-align:start;
       display:flex;
       flex-direction:column;
       justify-content:space-between;
-      scroll-snap-align:start;
     ">
-      <div style="font-weight:700;">撑一下午</div>
+      <div style="font-weight:600;">撑一下午</div>
       <div>杂粮饭 + 蛋白 + 蔬菜</div>
-      <div class="meta">下午更平稳</div>
+      <div style="font-size:12px; color:#6b7280;">下午更平稳</div>
     </div>
 
-    <div class="pill" style="
+    <!-- 卡片 3 -->
+    <div style="
       min-width:260px;
-      min-height:150px;
-      padding:14px 16px;
+      padding:12px 14px;
+      border:1px solid #e5e7eb;
+      border-radius:14px;
+      background:#fff;
+      scroll-snap-align:start;
       display:flex;
       flex-direction:column;
       justify-content:space-between;
-      scroll-snap-align:start;
     ">
-      <div style="font-weight:700;">睡晚修复</div>
+      <div style="font-weight:600;">睡晚修复</div>
       <div>红薯 + 蛋白 + 温热菜</div>
-      <div class="meta">对系统温和</div>
+      <div style="font-size:12px; color:#6b7280;">对系统温和</div>
     </div>
 
-    <div class="pill" style="
+    <!-- 卡片 4 -->
+    <div style="
       min-width:260px;
-      min-height:150px;
-      padding:14px 16px;
+      padding:12px 14px;
+      border:1px solid #e5e7eb;
+      border-radius:14px;
+      background:#fff;
+      scroll-snap-align:start;
       display:flex;
       flex-direction:column;
       justify-content:space-between;
-      scroll-snap-align:start;
     ">
-      <div style="font-weight:700;">想吃面</div>
+      <div style="font-weight:600;">想吃面</div>
       <div>荞麦面（半份）+ 蛋白 + 多菜</div>
-      <div class="meta">解馋但不放大波动</div>
+      <div style="font-size:12px; color:#6b7280;">解馋但不放大波动</div>
     </div>
 
-    <div class="pill" style="
+    <!-- 卡片 5 -->
+    <div style="
       min-width:260px;
-      min-height:150px;
-      padding:14px 16px;
+      padding:12px 14px;
+      border:1px solid #e5e7eb;
+      border-radius:14px;
+      background:#fff;
+      scroll-snap-align:start;
       display:flex;
       flex-direction:column;
       justify-content:space-between;
-      scroll-snap-align:start;
     ">
-      <div style="font-weight:700;">胃口差</div>
+      <div style="font-weight:600;">胃口差</div>
       <div>清汤 + 蛋花 / 豆腐 + 少量主食</div>
-      <div class="meta">避免能量塌陷</div>
+      <div style="font-size:12px; color:#6b7280;">避免能量塌陷</div>
     </div>
 
-    <div class="pill" style="
+    <!-- 卡片 6 -->
+    <div style="
       min-width:260px;
-      min-height:150px;
-      padding:14px 16px;
+      padding:12px 14px;
+      border:1px solid #e5e7eb;
+      border-radius:14px;
+      background:#fff;
+      scroll-snap-align:start;
       display:flex;
       flex-direction:column;
       justify-content:space-between;
-      scroll-snap-align:start;
     ">
-      <div style="font-weight:700;">外食兜底</div>
+      <div style="font-weight:600;">外食兜底</div>
       <div>有主食（少量）+ 有蛋白 + 少汤少甜</div>
-      <div class="meta">看起来稳最重要</div>
+      <div style="font-size:12px; color:#6b7280;">看起来稳最重要</div>
     </div>
+
   </div>
 </div>
+
+  
 </body>
 </html>
