--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <header>
       <div>
         <h1>健康打卡｜效率优先</h1>
-        <div class="sub">目标：稳住甲状腺 / 乳腺 / 血象 / 肾结晶（最少决策成本）</div>
+        <div class="sub">目标：健康生活，不要有慢性病！</div>
       </div>
       <div class="pill"><span id="todayLabel">—</span> <span class="mono" id="streak">Streak: 0</span></div>
     </header>
@@ -135,7 +135,7 @@
           <button id="nextBtn">明天 →</button>
           <button id="todayBtn">回到今天</button>
         </div>
-        <div class="small">提示：iPhone 上可用 Safari 打开此页面后，点「分享」→「添加到主屏幕」实现像 App 一样打卡。</div>
+        <div class="small">提示：记得按保存。</div>
       </section>
 
       <aside class="card">
