--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <header>
       <div>
         <h1>健康打卡｜效率优先</h1>
-        <div class="sub">目标：健康生活，不要有慢性病！</div>
+        <div class="sub">目标：健康生活，不要有慢性病！ v2 </div>
       </div>
       <div class="pill"><span id="todayLabel">—</span> <span class="mono" id="streak">Streak: 0</span></div>
     </header>
