--- a/index.html
+++ b/index.html
@@ -123,6 +123,15 @@
 html, body{
   overflow-x:hidden;
 }/* ✅ 最后一层兜底保险 */
+
+/* ✅ iOS time input 右侧溢出修复 */
+.two > div{ min-width:0; }             /* 允许网格子项收缩 */
+input[type="time"]{
+  display:block;
+  width:100%;
+  max-width:100%;
+}
+
     
   </style>
 </head>
@@ -131,7 +140,7 @@ html, body{
     <header>
       <div>
         <h1>健康打卡｜效率优先</h1>
-        <div class="sub">目标：健康生活，不要有慢性病！ v25 </div>
+        <div class="sub">目标：健康生活，不要有慢性病！ v26 </div>
       </div>
       <div class="pill"><span id="todayLabel">—</span> <span class="mono" id="streak">Streak: 0</span></div>
     </header>
