--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@ input[type="time"]{
   max-width:100%;
 }
 
+    .card{ overflow:hidden; }
     
   </style>
 </head>
@@ -140,7 +141,7 @@ input[type="time"]{
     <header>
       <div>
         <h1>健康打卡｜效率优先</h1>
-        <div class="sub">目标：健康生活，不要有慢性病！ v26 </div>
+        <div class="sub">目标：健康生活，不要有慢性病！ v27 </div>
       </div>
       <div class="pill"><span id="todayLabel">—</span> <span class="mono" id="streak">Streak: 0</span></div>
     </header>
